otel-operator/manifests/service.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: cnos-system/otel-operator-opentelemetry-operator
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.99.0"
  name: otel-operator-opentelemetry-operator
  namespace: cnos-system
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|cnos-system|otel-operator-opentelemetry-operator'
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/component: controller-manager
---
apiVersion: v1
kind: Service
metadata: # kpt-merge: cnos-system/otel-operator-opentelemetry-operator-webhook
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.99.0"
  name: otel-operator-opentelemetry-operator-webhook
  namespace: cnos-system
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|cnos-system|otel-operator-opentelemetry-operator-webhook'
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: webhook-server
  selector:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/component: controller-manager
