otel-operator/manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata: # kpt-merge: /otel-operator-opentelemetry-operator-mutation
  annotations:
    cert-manager.io/inject-ca-from: cnos-system/otel-operator-opentelemetry-operator-serving-cert
    internal.kpt.dev/upstream-identifier: 'admissionregistration.k8s.io|MutatingWebhookConfiguration|default|otel-operator-opentelemetry-operator-mutation'
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.99.0"
  name: otel-operator-opentelemetry-operator-mutation
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: otel-operator-opentelemetry-operator-webhook
      namespace: cnos-system
      path: /mutate-opentelemetry-io-v1alpha1-instrumentation
      port: 443
  failurePolicy: Fail
  name: minstrumentation.kb.io
  rules:
  - apiGroups:
    - opentelemetry.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - instrumentations
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: otel-operator-opentelemetry-operator-webhook
      namespace: cnos-system
      path: /mutate-opentelemetry-io-v1beta1-opentelemetrycollector
      port: 443
  failurePolicy: Fail
  name: mopentelemetrycollectorbeta.kb.io
  rules:
  - apiGroups:
    - opentelemetry.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - opentelemetrycollectors
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: otel-operator-opentelemetry-operator-webhook
      namespace: cnos-system
      path: /mutate-v1-pod
      port: 443
  failurePolicy: Ignore
  name: mpod.kb.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata: # kpt-merge: /otel-operator-opentelemetry-operator-validation
  annotations:
    cert-manager.io/inject-ca-from: cnos-system/otel-operator-opentelemetry-operator-serving-cert
    internal.kpt.dev/upstream-identifier: 'admissionregistration.k8s.io|ValidatingWebhookConfiguration|default|otel-operator-opentelemetry-operator-validation'
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.99.0"
  name: otel-operator-opentelemetry-operator-validation
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: otel-operator-opentelemetry-operator-webhook
      namespace: cnos-system
      path: /validate-opentelemetry-io-v1alpha1-instrumentation
      port: 443
  failurePolicy: Fail
  name: vinstrumentationcreateupdate.kb.io
  rules:
  - apiGroups:
    - opentelemetry.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - instrumentations
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: otel-operator-opentelemetry-operator-webhook
      namespace: cnos-system
      path: /validate-opentelemetry-io-v1alpha1-instrumentation
      port: 443
  failurePolicy: Ignore
  name: vinstrumentationdelete.kb.io
  rules:
  - apiGroups:
    - opentelemetry.io
    apiVersions:
    - v1alpha1
    operations:
    - DELETE
    resources:
    - instrumentations
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: otel-operator-opentelemetry-operator-webhook
      namespace: cnos-system
      path: /validate-opentelemetry-io-v1beta1-opentelemetrycollector
      port: 443
  failurePolicy: Fail
  name: vopentelemetrycollectorcreateupdatebeta.kb.io
  rules:
  - apiGroups:
    - opentelemetry.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - opentelemetrycollectors
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: otel-operator-opentelemetry-operator-webhook
      namespace: cnos-system
      path: /validate-opentelemetry-io-v1beta1-opentelemetrycollector
      port: 443
  failurePolicy: Ignore
  name: vopentelemetrycollectordeletebeta.kb.io
  rules:
  - apiGroups:
    - opentelemetry.io
    apiVersions:
    - v1beta1
    operations:
    - DELETE
    resources:
    - opentelemetrycollectors
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
